# sctp-dsai-kaggle-competition

./: .gitignore  eda.ipynb  main.ipynb  main_catboost.ipynb  main_catboost_v2.ipynb  main_lightgbm.ipynb  pyproject.toml  readme.md
.memsearch/: .last_msg_time
.memsearch/memory/: 2026-04-21.md  2026-04-23.md  2026-04-24.md  2026-04-25.md
data/: sample_sub_reg.csv
samples/: part_1_supervised_learning.ipynb  part_1_supervised_learning_2_lesson.ipynb  part_3_supervised_learning_2_lesson.ipynb  part_4_supervised_learning_2_lesson.ipynb
submission/: submission_catboost.csv  submission_catboost_v2.csv  submission_catboost_v4.csv
