[project]
name = "ntu-sctp-dasi-mod3-kaggle"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "statsmodels",
    "scikit-learn",
    "jupyter",
    "seaborn",
    "lightgbm",
    "catboost",
    "cloudpickle>=3.1.2",
    "s2sphere",
    "geohash2",
    "shap",
    "hdbscan"
]